# roscamp-repo-3

./: .gitignore  README.md  pyproject.toml
device/: README.md
device/ropi_arm/src/ropi_arm_status_test/: CMakeLists.txt  jetcobot_status_json_publisher.py  package.xml
device/ropi_arm/src/ropi_arm_status_test/msg/: ArmStatus.msg
device/ropi_common/src/ropi_interface/: CMakeLists.txt  README.md  package.xml
device/ropi_common/src/ropi_interface/action/: ArmManipulation.action  ExecutePatrolPath.action
device/ropi_common/src/ropi_interface/msg/: GuidePhaseSnapshot.msg  GuideTrackingUpdate.msg  PinkyStatus.msg
device/ropi_common/src/ropi_interface/srv/: FallResponseControl.srv  GuideCommand.srv
device/ropi_common/src/ropi_interface/test/: test_guide_interface_contract.py
device/ropi_mobile/pinky_pro/src/pinky_pro/pinky_fleet_sim/: CMakeLists.txt  package.xml
device/ropi_mobile/pinky_pro/src/pinky_pro/pinky_fleet_sim/config/: two_pinky_robots.yaml
device/ropi_mobile/pinky_pro/src/pinky_pro/pinky_fleet_sim/launch/: two_pinky_nav.launch.py  two_pinky_sim.launch.py
device/ropi_mobile/pinky_pro/src/pinky_pro/pinky_fleet_sim/maps/: fleet_practice_large.pgm  fleet_practice_large.yaml
device/ropi_mobile/pinky_pro/src/pinky_pro/pinky_fleet_sim/scripts/: generate_fleet_practice_map.py
device/ropi_mobile/src/ropi_guide/: README.md  package.xml  setup.cfg  setup.py
device/ropi_mobile/src/ropi_guide/launch/: guide.launch.py
device/ropi_mobile/src/ropi_guide/ropi_guide/: tracking_node.py
device/ropi_mobile/src/ropi_mobile_status_test/: CMakeLists.txt  package.xml  pinky_status_json_live_publisher.py  pinky_status_json_publisher.py  pinky_status_json_test_publisher.py  pinky_status_runtime_publisher.py
device/ropi_mobile/src/ropi_mobile_status_test/config/: pinky_status.params.yaml
device/ropi_mobile/src/ropi_mobile_status_test/msg/: PinkyStatus.msg
device/ropi_mobile/src/ropi_nav_config/: CMakeLists.txt  README.md  package.xml
device/ropi_mobile/src/ropi_nav_config/launch/: pinky_nav.launch.py
device/ropi_mobile/src/ropi_nav_config/maps/: map_0504.pgm  map_0504.yaml  map_test11_0423.yaml  map_test12_0506.pgm  map_test12_0506.yaml
device/ropi_mobile/src/ropi_patrol/: README.md  package.xml  setup.cfg  setup.py
device/ropi_mobile/src/ropi_patrol/config/pinky3/: patrol.yaml
device/ropi_mobile/src/ropi_patrol/launch/: patrol.launch.py
device/ropi_mobile/src/ropi_patrol/ropi_patrol/: fallen_alarm.py  fallen_alarm_buzzer.py  fallen_detection_client.py  fallen_detection_client_tcp.py  led.py  patrol_path_action_server.py  ropi_camera.py
server/: .env.example  README.md  __init__.py  pytest_runner.py
server/ai_service/: fallen_detection_server.py  fallen_detection_server_tcp.py
server/ropi_db/: README.md  __init__.py  connection.py  delivery_item_catalog_migration.py  guide_location_config_migration.py  guide_tracking_schema_migration.py  init_tables.sql  insert_dummies.sql  multimap_coordinate_migration.py
server/ropi_db/config/: __init__.py  db_config.py
server/ropi_db/repositories/: __init__.py  caregiver_repository.py  delivery_repository.py  inventory_repository.py  patient_repository.py  staff_call_repository.py  task_request_repository.py  user_repository.py  visit_guide_repository.py  visitor_info_repository.py  visitor_register_repository.py
server/ropi_main_service/: __init__.py  login_cli.py  observability.py  tcp_server.py
server/ropi_main_service/application/: __init__.py  action_feedback.py  action_feedback_event_runtime.py  action_feedback_sampling.py  auth.py  caregiver.py  caregiver_rpc_facade.py  command_execution.py  coordinate_config.py  coordinate_config_assets.py  coordinate_config_formatters.py  coordinate_config_validators.py  delivery_cancel.py  delivery_config.py  delivery_orchestrator.py  delivery_runtime.py  delivery_task_create.py  delivery_workflow_task_manager.py  fall_evidence_image.py  fall_inference_result.py  fall_inference_runtime.py  (+42 more)
test/: README.md
test/integration/: allwaystest_ui-server-db.py  allwaystest_ui-server-db_ver2 copy.py  conftest.py  guide_command_service_stub.py  guide_tracking_update_bridge.py  guide_tracking_update_subscriber.py  jetcobot_status_comm_subscriber.py  jetcobot_status_json_subscriber.py  jetcobot_status_subscriber.py  monitor_ui_server_db_1min.py  ping_pong_test.md  pinky_status_comm_subscriber.py  pinky_status_json_subscriber.py  pinky_status_subscriber.py  runtime_db_seeders.py  runtime_servers.py  runtime_waiting.py  test_if_com_007_runtime_wireup.py  test_if_com_008_media_gateway.py  test_runtime_ui_server.py  test_server_db_connection.py  test_ui_server_connection.py  test_ui_server_db_connection.py
test/local/: README.md  pinky_nav_status_runbook.md
test/system/: test_login_flow.py  test_tcp_heartbeat_and_login.py
test/unit/: test_control_service_server.py  test_delivery_navigation_config.py  test_delivery_orchestrator.py  test_delivery_request_service.py  test_device_runtime_config_contract.py  test_device_workspace_layout.py  test_if_com_007_action_definition.py  test_if_com_007_delivery_wireup.py  test_if_com_007_goal_pose_navigation_service.py  test_if_com_007_ipc_config.py  test_if_com_007_rclpy_action_client.py  test_if_com_007_ros_service_server.py  test_if_com_007_uds_command_client.py  test_if_del_001_server_contract.py  test_if_del_001_ui_contract.py  test_if_del_003_action_definition.py  test_if_del_003_manipulation_command_service.py  test_if_del_003_rclpy_action_client.py  test_if_del_003_ros_service_server.py  test_ropi_interface_workspace_migration.py  test_tcp_client.py  test_tcp_frame_protocol.py
test_support/: paths.py  ros_action.py
ui/admin_ui/: __init__.py  login_auth_window.py  login_role_window.py  main.py  main_window.py
ui/kiosk_ui/: __init__.py  guide_confirmation_page.py  guide_progress_page.py  guide_progress_state.py  home_page.py  main.py  main_window.py  registration_page.py  shared_widgets.py  staff_call_controller.py  staff_call_modal.py
ui/user_ui/: __init__.py  main.py  main_window.py
ui/utils/: __init__.py  mock_data.py
(+510 files in other folders)
