[project]
name = "roscamp-repo-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.1.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "PyMySQL>=1.1.0",
    "PyQt6>=6.6",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
ropi-control-server = "server.ropi_main_service.transport.tcp_server:main"
ropi-admin-ui = "ui.admin_ui.main:main"
ropi-user-ui = "ui.user_ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "ui"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
