[project]
name = "roscamp-repo-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt>=4.1.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "PyMySQL>=1.1.0",
    "PyQt6>=6.6",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
ai-server = [
    "ultralytics>=8.4.37",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
ropi-control-server = "server.ropi_main_service.transport.tcp_server:main"
ropi-db-migrate-delivery-items = "server.ropi_db.delivery_item_catalog_migration:main"
ropi-db-migrate-guide-location = "server.ropi_db.guide_location_config_migration:main"
ropi-db-migrate-guide-tracking = "server.ropi_db.guide_tracking_schema_migration:main"
ropi-db-migrate-multimap = "server.ropi_db.multimap_coordinate_migration:main"
ropi-media-gateway = "server.ropi_main_service.transport.vision_frame_gateway:main"
ropi-ros-action-test = "server.ropi_main_service.ros.action_test_cli:main"
ropi-ros-service = "server.ropi_main_service.ros.main:main"
ropi-status-topic-monitor = "server.ropi_main_service.ros.status_topic_monitor:main"
ropi-admin-ui = "ui.admin_ui.main:main"
ropi-kiosk-ui = "ui.kiosk_ui.main:main"
ropi-user-ui = "ui.user_ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "ui"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
