<?xml version="1.0"?>
<package format="3">
  <name>ropi_guide</name>
  <version>0.0.1</version>
  <description>Tracking controller using /cmd_vel only</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
