<?xml version="1.0"?>
<package format="3">
  <name>ropi_nav_config</name>
  <version>0.1.0</version>
  <description>ROPI robot-specific Pinky navigation configuration and launch wrappers.</description>
  <maintainer email="addinedu@todo.todo">ROPI Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pinky_navigation</exec_depend>
  <exec_depend>ropi_mobile_status_test</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
